--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongodb": "^6.5.0"
+    "express": "^4.21.1",
+    "mongodb": "^6.5.0",
+    "nodemon": "^3.1.7"
   }
 }
